syntax = "proto3";

//for future protoc-gen-go requirement
option go_package = "github.com/stratosnet/sds/msg/protos";

package protos;
// j
import "sds_comm.proto";

// upload -----------------------------------



message ReqGetPPList {
  PPBaseInfo my_address = 1;

}

message RspGetPPList{
  repeated PPBaseInfo pp_list = 1;
  Result result = 2;
}

message ReqGetSPList {
  PPBaseInfo my_address = 1;
}

message RspGetSPList{
  repeated SPBaseInfo sp_list = 1;
  Result result = 2;
}

message ReqRegister {
  PPBaseInfo address = 1;
  bytes public_key = 2;
  PPBaseInfo my_address = 3; //middleman pp address
}

message RspRegister {
  Result result = 1; // if register success or not
  string p2p_address = 2;
  bool   isPP = 3;
}

message ReqMining {
  PPBaseInfo address = 1;
  bytes public_key = 2; // publickey
  bytes sign = 3; //signature
}

message RspMining {
  Result result = 1;
}

message ReqUploadFile {
  FileInfo file_info = 1;
  PPBaseInfo my_address = 2;
  bytes sign = 3;
  string req_id = 4;
  bool is_cover = 5;
  bool is_video_stream = 6;
}

message RspUploadFile {
  string storage_cer = 1; // storage certificate
  repeated SliceNumAddr pp_list = 2; // slice number and pp address list
  string file_hash = 3;
  string task_id = 4; //
  int64  total_slice = 5; //
  Result result = 6; // accept upload or not
  string req_id = 7;//
  string owner_wallet_address = 8;
  bool   is_video_stream = 9;
  uint64 video_slice_duration = 10;
  bool   is_encrypted = 11;
  string sp_p2p_address = 12;
  bytes  sign = 13;
}

message ReqUploadFileSlice {
  SliceNumAddr    slice_num_addr = 1; //
  uint32          file_crc = 2; //
  SliceOffsetInfo slice_info = 3; //
  bytes           data = 4; //
  string          file_hash = 5; //
  string          p2p_address = 6;
  string          wallet_address = 7; //
  string          task_id = 8; //
  uint64          slice_size = 9; //
  string          sp_p2p_address = 10;
  bytes           sign = 11;
}

message RspUploadFileSlice {
  Result       result = 1; //
  SliceNumAddr slice_num_addr = 2; //
  string       file_hash = 3; //
  string       slice_hash = 4; //
  string       p2p_address = 5;
  string       wallet_address = 6; //
  uint64       slice_size = 7; //
  string       task_id = 8; //
  string       sp_p2p_address = 9;
}


message UploadSpeedOfProgress {
  string file_hash = 1; //
  uint64 slice_size = 2; //
}

message ReportUploadSliceResult {
  SliceNumAddr slice_num_addr = 1; //
  string     slice_hash = 2; //
  string     file_hash = 3; //
  bool       upload_success = 4;
  bool       isPP = 5; //
  uint64     slice_size = 6; //
  bytes      sign = 7;
  string     task_id = 8;
  string     p2p_address = 9;
  string     wallet_address = 10;
  string     sp_p2p_address = 11;
}

message RspReportUploadSliceResult {
  Result result = 1;
  SliceNumAddr slice_num_addr = 2;
}

message Uploaded {
  string reporter_address = 1;
  string uploader_address = 2;
  string file_hash = 3;
  string tx_hash = 4;
}


message ReqFindMyFileList {
  string p2p_address = 1;
  string wallet_address = 2;
  string file_name = 3; // return all if file name is empty
  uint64 page_id = 4;
  string req_id = 5;
  FileSortType file_type = 6;
  bool is_up = 7;
  string keyword = 8;

}

message RspFindMyFileList {
  repeated FileInfo file_info = 1;
  string p2p_address = 2;
  string wallet_address = 3;
  string req_id = 4;
  uint64 total_file_number = 5;
  uint64 page_id = 6;
  Result result = 7;
}

//get file and download -----------------------------------


message ReqFileStorageInfo {
  FileIndexes     file_indexes = 1;
  bytes           sign = 2;
  string          req_id = 3;
  bool            is_video_stream = 4;
  ReqGetShareFile share_request = 5;
}

message RspFileStorageInfo {
  string visit_cer = 1;
  string p2p_address = 2;
  string wallet_address = 3;
  repeated DownloadSliceInfo slice_info = 4;
  string file_hash = 5;
  string file_name = 6;
  Result result = 7;
  string req_id = 8;
  string save_path = 9;
  uint64 file_size = 10;
  bool   is_video_stream = 11;
  string rest_address = 12;
  bytes  sign = 13; //sp signature
  string sp_p2p_address = 14;
  string encryption_tag = 15;
}

message ReqDownloadFileWrong {
  FileIndexes         file_indexes = 1;
  string              file_hash = 2;
  bytes               sign = 3;
  string              req_id = 4;
  bool                is_video_stream = 5;
  repeated string     failed_slices = 6;
  repeated PPBaseInfo failed_pp_nodes = 7;
}

message ReqDownloadSlice {
  SliceOffsetInfo    slice_info = 1;
  string             p2p_address = 2;
  string             wallet_address = 3;
  string             file_hash = 4;
  string             task_id = 5;
  string             save_path = 6;
  string             req_id = 7;
  bool               is_encrypted = 8;
  string             sp_p2p_address = 9;
  uint64             slice_number = 10;
  bytes              sign = 11;
  bool               is_video_caching = 12;
}

message RspDownloadSlice {
  SliceOffsetInfo slice_info = 1;
  uint32 file_crc = 2;
  string file_hash = 3;
  bytes  data = 4;
  string p2p_address = 5;
  string wallet_address = 6;
  string task_id = 7;
  uint64 slice_size = 8; // is the encrypted slice size if the file is encrypted
  uint64 raw_slice_size = 9;
  bool   needReport = 10; // used for passagePP whether the last slice
  string save_path = 11;
  Result result = 12;
  string req_id = 13;
  bool   is_encrypted = 14;
  string sp_p2p_address = 15;
  bool   is_video_caching = 16;
}

message ReqDownloadSliceWrong {
  string p2p_address = 1;
  string wallet_address = 2;
  string task_id = 3;
  string slice_hash = 4;
  DownloadWrongType type = 5;
  string save_path = 6;
}

message RspDownloadSliceWrong {
  string p2p_address = 1;
  string wallet_address = 2;
  string file_hash = 3;
  string task_id = 4;
  DownloadSliceInfo new_slice_info = 5;
  string save_path = 6;
  Result result = 7;
}

message ReqDownloadSlicePause {
  string p2p_address = 1;
  string wallet_address = 2;
  string file_hash = 3;
  string req_id = 4;
}
message RspDownloadSlicePause {
  string p2p_address = 1;
  string wallet_address = 2;
  string file_hash = 3;
  string req_id = 4;
  Result result = 5;
}

message ReqReportDownloadResult {
  bool isPP = 1; // p doesn't need DownloadSliceInfo
  DownloadSliceInfo slice_info = 2;
  string file_hash = 3;
  string downloader_p2p_address = 4;
  string downloader_wallet_address = 5;
  string my_p2p_address = 6; // PP's P2P key address
  string my_wallet_address = 7; // PP's wallet address
  bytes  sign = 8;
  string task_id = 9;
  string sp_p2p_address = 10;
}

message RspReportDownloadResult {
  Result result = 1;
  DownloadSliceInfo slice_info = 2;
}

message ReqReportTaskBP {
  string task_id = 1;
  PPBaseInfo reporter = 2;
  uint64 traffic = 3;
}

message ReqRegisterNewPP {
  string  p2p_address = 1;
  string  wallet_address = 2;
  uint64  disk_size = 3;
  uint64  free_disk = 4;
  uint64  memory_size = 5;
  string  os_and_ver = 6;
  string  cpu_info = 7;
  string  mac_address = 8;
  uint32  version = 9;
  bytes   pub_key = 10;
  bytes   sign = 11;
  string  network_address = 12;
}

message RspRegisterNewPP {
  Result result = 1;
  bool   already_pp = 2;
}

message ReqActivatePP {
  bytes      tx = 1;
  PPBaseInfo pp_info = 2;
  bool       already_active = 3;
  string     initial_stake = 4;
}

message RspActivatePP {
  Result result = 1;
  uint32 activation_state = 2;
  bytes  tx = 3;
}

message ReqActivatedPP {
  string p2p_address = 1;
  string p2p_pubkey = 2;
  string ozone_limit_changes = 3; // positive
  string tx_hash = 4;
  string initial_stake = 5;
}

message ReqActivatedSP {
  string p2p_address = 1;
  string ozone_limit_changes = 2; // positive
  string tx_hash = 3;
}

message RspActivatedPP {
  Result result = 1;
}

message ReqUpdateStakePP {
  bytes tx = 1;
  string p2p_address = 2;
}

message RspUpdateStakePP {
  Result result = 1;
  uint32 update_state = 2;
  bytes  tx = 3;
}

message ReqUpdatedStakePP {
  string p2p_address = 1;
  string ozone_limit_changes = 2;
  string incr_stake = 3; // true/false
  string tx_hash = 4;
  string stake_delta = 5;
}

message ReqUpdatedStakeSP {
  string p2p_address = 1;
  string ozone_limit_changes = 2;
  string incr_stake = 3; // true/false
  string tx_hash = 4;
}

message RspUpdatedStakePP {
  Result result = 1;
  string stake_balance = 2;
  string node_tier = 3;
  string weight_score = 4;
}

message ReqDeactivatePP {
  bytes tx = 1;
  string p2p_address = 2;
}

message RspDeactivatePP {
  Result result = 1;
  uint32 activation_state = 2;
  bytes  tx = 3;
}

message RspPPRegisteredToSP {
  Result result = 1;
}

message ReqUnbondingPP {
  string p2p_address = 1;
  string ozone_limit_changes = 2; // negative
  string unbonding_mature_time = 3;
  string tx_hash = 4;
  string stake_to_remove = 5;
}

message RspUnbondingPP {
  Result result = 1;
}

message ReqDeactivatedPP {
  string p2p_address = 1;
  string tx_hash = 2;
}

message RspDeactivatedPP {
  Result result = 1;
}

message ReqUnbondingSP {
  string p2p_address = 1;
  string ozone_limit_changes = 2; // negative
  string unbonding_mature_time = 3;
}

message RspUnbondingSP {
  Result result = 1;
}

message ReqDeactivatedSP {
  string p2p_address = 1;
}

message RspDeactivatedSP {
  Result result = 1;
}

message ReqPrepay {
  bytes tx = 1;
  string p2p_address = 2;
  string wallet_address = 3;
}

message RspPrepay {
  Result result = 1;
  bytes  tx = 2;
}

message ReqPrepaid {
  string wallet_address = 1;
  string purchased_uoz = 2;
  string tx_hash = 3;
}

message RspPrepaid {
  Result result = 1;
}


message ReqDeleteFile {
  string p2p_address = 1;
  string wallet_address = 2;
  string file_hash = 3;
  bytes  sign = 4;
  string req_id = 5;
}

message RspDeleteFile {
  string p2p_address = 1;
  string wallet_address = 2;
  string file_hash = 3;
  Result result = 4;
  string req_id = 5;
}


// file transfer commented out for backup logic redesign QB-897
/*
// SP notify new PP to get file from storing PP，slice info are included
// new pp transfer to old pp, slice infos are not included,
message ReqTransferNotice {
  SliceStorageInfo slice_storage_info = 1;
  string transfer_cer = 2;
  bool from_sp = 3;
  PPBaseInfo storage_pp_info = 4;
  bool deleteOrigin = 5;
  string sp_p2p_address = 6;
}
message RspTransferNotice {
  Result result = 1;
  string transfer_cer = 2;
  PPBaseInfo storage_pp_info = 3;
  string sp_p2p_address = 4;
}

//  storagePP-SP
message ReqValidateTransferCer {
  string transfer_cer = 1;
  PPBaseInfo new_pp = 2;
  PPBaseInfo original_pp = 3;
  string sp_p2p_address = 4;
}
//  SP-PP PP-PP
message RspValidateTransferCer {
  Result result = 1;
  string transfer_cer = 2;
  string new_pp_p2p_address = 3;
  string sp_p2p_address = 4;
}

message ReqReportTransferResult {
  string transfer_cer = 1;
  PPBaseInfo new_pp = 2;
  Result result = 3;
  bool is_new = 4;
  bool origin_deleted = 5;
  string sp_p2p_address = 6;
}
message RspReportTransferResult {
  Result result = 1;
  string transfer_cer = 2;
  string new_pp_p2p_address = 3;
}
*/

// the message that is sent to the pp which will pull the
// slice from another pp which stores the file slice
message ReqFileSliceBackupNotice {
  string           task_id = 1;
  string           file_hash = 2;
  SliceStorageInfo slice_storage_info = 3;
  uint64           slice_number = 4;
  PPBaseInfo       pp_info = 5; // p2p which stores the file slice
  string           sp_p2p_address = 6;
  bool             delete_origin = 7;
  bytes            sign = 8; //signature is signed on 'file_hash#slice_hash#receiver_p2p_address#sender_p2p_address'
  bytes            pubkey = 9;
}

// the message that is sent back to sp from both the slice sender pp
// and the slice receiver pp
message ReqReportBackupSliceResult {
  string     task_id = 1; //
  string     file_hash = 2; //
  string     slice_hash = 3; //
  bool       backup_success = 4;
  bool       is_receiver = 5; //
  bool       origin_deleted = 6;
  uint64     slice_number = 7;
  uint64     slice_size = 8; //
  PPBaseInfo pp_info = 9;
  string     sp_p2p_address = 10;
}
message RspReportBackupSliceResult {
  string task_id = 1;
  Result result = 2;
  string slice_hash = 3;
}

message ReqBackupStatus {
  string task_id = 1;
  string file_hash = 2;
  string p2p_address = 3;
  string wallet_address = 4;
}

message RspBackupStatus {
  string  task_id = 1;
  Result  result = 2;
  string  file_hash = 3;
  uint32  replicas = 4;
  bool    delete_origin_tmp = 5;
  string  sp_p2p_address = 6;
  bytes   sign = 7;
  repeated SliceHashAddr pp_list = 8;
}

message ReqTransferDownload {
  string           task_id = 1;
  PPBaseInfo       new_pp = 2;
  PPBaseInfo       original_pp = 3;
  SliceStorageInfo slice_storage_info = 4;
  string           sp_p2p_address = 5;
  string           file_hash = 6;
  uint64           slice_num = 7;
  bool             delete_origin = 8;
}
message RspTransferDownload {
  string task_id = 1;
  bytes  data = 2;
  uint64 offset = 3;
  uint64 slice_size = 4;
  Result result = 5;
  string sp_p2p_address = 6;
  string slice_hash = 7;
}

message RspTransferDownloadResult {
  string task_id = 1;
  Result result = 2;
  string sp_p2p_address = 3;
  string slice_hash = 4;
}


// sp - pp get storage info
message ReqGetHDInfo {
  string p2p_address = 1;
  string wallet_address = 2;
}

message RspGetHDInfo {
  uint64 disk_size = 1;
  uint64 disk_free = 2 ;
  string p2p_address = 3;
  string wallet_address = 4;
}

// sp
message ReqDeleteSlice {
  string p2p_address = 1;
  string slice_hash = 2; //
  // bytes  sign = 3; //SP signature  wallet address + hash
}

message RspDeleteSlice {
  string p2p_address = 1;
  string slice_hash = 2;
  string file_hash = 3;
  Result result = 4;
}

message ReqLatencyCheck {
  HeartbeatType hb_type = 1;
  string p2p_address_pp = 2;
  string network_address_sp = 3;
  string sp_index = 4;
  string ping_time = 5;
}

message RspLatencyCheck {
  HeartbeatType hb_type = 1;
  string p2p_address_pp = 2;
  string network_address_sp = 3;
  string sp_index = 4;
  string ping_time = 5;
}

// BP msg ###################

message ReqBLSPublicKey {
  string msg = 1;
  string id = 2;
}

// get bp BLS public key
message RspBPBLSPublicKey {
  ReqRegister bp_info = 1;
  int64 code = 2;
  string id = 3;
}


message ReqBalance {
  string wallet_address = 1;
  string id = 2;
}


message RspBalance {
  float balance = 1;
  int64 code = 2;
  string id = 3;
}


message ReqTransaction {
  string transaction_hash = 1;
  int64 code = 2;
  string id = 3;
}


message RspTransaction {
  string rest = 1;
  int64 code = 2;
  string id = 3;
}


message ReqBlockInfo {
  string block_hash = 1;
  string id = 3;
}


message RspBlockInfo {
  bytes block_info = 1;
  int64 code = 2;
  string id = 3;
}


message ReqBlockCheck{
  int64 block_height = 1;
  string id = 3;
}


message RspBlockCheck {
  repeated BlockCheckInfo block_list = 1;
  int64 code = 2;
  string id = 3;
}

message BlockCheckInfo {
  int64 block_height = 1;
  string block_hash = 2;
  string id = 3;
}

//
message ReqDownloadTaskInfo {
  string task_id = 1;
  string id = 2;
}

message RspDownloadTaskInfo {
  string task_id = 1;
  uint64 slice_size = 2;
  string slice_hash = 3;
  uint64 slice_number = 4;
  string storage_p2p_address = 5;
  repeated string p2p_address_list = 6;
  uint64 time = 7;
  Result result = 8;
  string id = 9;
}

message ReqClearDownloadTask {
  string wallet_address = 1;
  string file_hash = 2;
  string p2p_address = 3;
}

message ReqShareLink {
  string p2p_address = 1;
  string wallet_address = 2;
  string req_id = 3;
}

message RspShareLink {
  repeated ShareLinkInfo share_info = 1;
  string req_id = 2;
  string p2p_address = 3;
  string wallet_address = 4; //
  Result result = 5;
}

message ReqShareFile {
  string file_hash = 1;
  bool   is_private = 2;
  int64  share_time = 3;
  string req_id = 4;
  string p2p_address = 5;
  string wallet_address = 6;
  string path_hash = 7;// share whole directory if this field is non-empty
}

message RspShareFile {
  string share_link = 1;
  string share_password = 2;
  string p2p_address = 3;
  string wallet_address = 4;
  string share_id = 5;
  string req_id = 6;
  Result result = 7;
}

message ReqDeleteShare {
  string share_id = 1;
  string p2p_address = 2;
  string wallet_address = 3; //
  string req_id = 4;
}

message RspDeleteShare {
  string share_id = 1;
  string p2p_address = 2;
  string wallet_address = 3; //
  string req_id = 4;
  Result result = 5;
}


message ReqGetShareFile {
  string keyword = 1; //
  string p2p_address = 2;
  string wallet_address = 3; //
  string req_id = 4;
  string share_password = 5;//
  string save_as = 6;
}


message RspGetShareFile {
  ReqGetShareFile share_request = 1;
  Result          result = 2;  // if failed, wrong share password
  bool            is_private = 3;
  repeated        FileInfo file_info = 4;
}

message RelayMessage {
  string type = 1;
  bytes data = 2;
}

message ReqTransferBLSSignature {
  string epoch = 1;
  bytes  pub_key = 2;
  bytes  signature = 3;
}

message ReqReportNodeStatus {
  string        p2p_address = 1;
  CpuStat       cpu = 2;
  MemoryStat    memory = 3;
  DiskStat      disk = 4;
  BandwidthStat bandwidth = 5;
}

message ReqGetPPStatus {
  PPBaseInfo my_address = 1;
  bool init_pp_list = 2;
}

message RspGetPPStatus{
  uint32 is_active = 1;
  uint32 ongoing_tier = 2;
  uint32 init_tier = 3;
  uint32 weight_score = 4;
  int32 state = 5;
  bool init_pp_list = 6;
  Result result = 7;
}

message ReqGetWalletOz {
  string wallet_address = 1;
}

message RspGetWalletOz{
  string wallet_oz = 1;
  string wallet_address = 2;
  Result result = 3;
}

enum PPState {
  OFFLINE = 0;
  ONLINE = 1;
  SUSPEND = 2;
}

message RspReportNodeStatus{
  int32 ppstate = 1;
  Result result = 2;
}

message RspBadVersion{
  int32  version = 1;
  int32  minimum_version = 2;
  string command = 3;
}